Task 5 EDA notebook (penguins)

--- a/notebooks/app_danilotraconis.ipynb
+++ b/notebooks/app_danilotraconis.ipynb
@@ -5,7 +5,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Dr. Case Notebook - Intro to Jupyter and Exploratory Data Analysis (EDA)\n",
+    "# Danilo Traconis Notebook - Intro to Jupyter and Exploratory Data Analysis (EDA)\n",
     "\n",
     "REQ: Open notebooks with a standard header including a good title, your company/name/alias, a link to the repo, purpose, and date.\n",
     "\n",
@@ -27,6 +27,16 @@
     "\n",
     "This is a Markdown cell."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   },
   {
    "cell_type": "markdown",
